--- a/nt.css
+++ b/nt.css
@@ -1,3 +1,25 @@
+/*login styles*/
+ body { font-family: Arial; 
+       max-width: 400px; 
+       margin: 0 auto; 
+       padding: 20px; 
+      }
+
+input { 
+    width: 100%; 
+    padding: 10px; 
+    margin: 8px 0; 
+    box-sizing: border-box; 
+}
+ button { 
+     background-color: #4CAF50; 
+     color: white; 
+     padding: 14px 20px; 
+     border: none; 
+     cursor: pointer; 
+     width: 100%; 
+ }
+
 /* Floating Notebook */
 .floating-notebook {
     position: fixed;
@@ -147,4 +169,5 @@ button {
 
 button:hover {
     background-color: #45a049;
+
 }
